[package]
name = "libtruinlag"
version.workspace = true
edition = "2024"
authors = ["Nelio Zoller"]

[dependencies]
geo = { version = "0.32", optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1.11", features = ["serde"], optional = true }
async-broadcast = { version = "0.7", optional = true }
chrono = { version = "0.4", features = ["serde"] }
partially = { version = "0.2", features = ["derive"] }
image = "0.25"
serialimage = { version = "4.1", optional = true }

[features]
api = [
  "bincode",
  "bytes",
  "tokio",
  "tokio-util",
  "futures",
  "async-broadcast",
  "serialimage",
]
with_geo = ["geo"]
