[package]
name = "trainlappcomms"
version.workspace = true
edition = "2024"
authors = ["Nelio Zoller"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3" }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
libtruinlag = { path = "../libtruinlag", features = ["api"] }
libtlc = { path = "../libtlc" }
