[package]
name = "tredit"
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.42"
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.46"
colored = "3.0.0"
csv = "1.3.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = "1.39.3"
truinlag = { git = "https://github.com/oOCraftRabbitOo/truinlag" }
