[package]
name = "tredit"
version = "0.13.0"
edition = "2024"
authors = ["Nelio Zoller"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "3.1"
csv = "1.4"
reqwest = { version = "0.13", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = "1"
libtruinlag = { path = "../libtruinlag", features = ["api"] }
