[package]
name = "truinlag"
description = "the engine for the trainlag game rust rewrite which has been completed and is live!"
edition = "2024"
version.workspace = true
authors = ["Nelio Zoller"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
bonsaidb = { version = "0.5", features = ["local", "async"] }
serde = "1.0"
rand_distr = "0.6"
rand = "0.10"
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = { version = "1.11", features = ["serde"] }
async-broadcast = "0.7"
chrono = { version = "0.4", features = ["serde"] }
partially = { version = "0.2", features = ["derive"] }
image = "0.25"
geo = { version = "0.32", features = ["serde"] }
strsim = "0.11"
log = "0.4"
pretty_env_logger = "0.5"
libtruinlag = { path = "../libtruinlag", features = ["with_geo"] }
